--- a/src/style.css
+++ b/src/style.css
@@ -54,14 +54,34 @@ form{
 .fun-fact{
     font-size: 16px;
     background-color: white;
+    color: #272044;
     padding: 20px;
     line-height: 2;
     border-left: 3px solid #885df1;
     box-shadow: 0px 4px 30px 0px rgba(39, 33, 66, 0.03);
     border-radius: 4px;
 }
+.hidden{
+    display: none;
+}
 footer{
     text-align: center;
     font-size: 14px;
     margin-top: 30px;
+}
+.generating {
+  animation: blink-animation 1s steps(5, start) infinite;
+  color: #272044;
+  opacity: 0.8;
+}
+
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
 }
